force-app/main/default/objects/Script_Scene__c/Script_Scene__c.object-meta.xml
<CustomObject>
    <description>Ordered scene within a script. Parent of Script_Block__c rows.</description>
    <label>Script Scene</label>
    <nameField>
        <displayFormat>SCN-{000000}</displayFormat>
        <label>Scene Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Scenes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>