force-app/main/default/objects/Script_Scene__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Parsed or entered location portion of the scene heading.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>