force-app/main/default/objects/Script_Scene__c/fields/Scene_Heading__c.field-meta.xml
<CustomField>
    <fullName>Scene_Heading__c</fullName>
    <description>Full slugline, e.g. INT. OFFICE - DAY.</description>
    <label>Scene Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>