force-app/main/default/objects/Script_Scene__c/fields/Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Day__c</fullName>
    <description>Parsed or entered time-of-day portion, e.g. DAY, NIGHT.</description>
    <label>Time Of Day</label>
    <length>80</length>
    <type>Text</type>
</CustomField>