force-app/main/default/objects/Script_Scene__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Script__c</columns>
    <columns>Sequence__c</columns>
    <columns>Scene_Heading__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Script Scenes</label>
</ListView>